<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ex5Activity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ex5_title"
        android:textAlignment="center"
        android:textSize="20sp"
        android:gravity="center"
        android:padding="15sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="75sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <CheckBox
            android:id="@+id/linux_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linux_box" />

        <CheckBox
            android:id="@+id/macos_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/macos_box"
            android:checked="true" />

        <CheckBox
            android:id="@+id/windows_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/windows_box" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_label" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="50sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <Button
            android:id="@+id/ex5_return_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:text="@string/return_to_homepage_btn"
            android:layout_marginTop="100sp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>