<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Ex4Activity">

    <TextView
        android:id="@+id/exo4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:text="@string/ex4_title"
        android:textSize="20sp"
        android:padding="15sp"/>

    <LinearLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/toaster_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toast_btn" />

        <Button
            android:id="@+id/toggle_secret_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_secret_message" />

        <Button
            android:id="@+id/long_press_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/long_press_button" />

        <TextView
            android:id="@+id/hidden_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="50sp">

        <Button
            android:id="@+id/ex4_return_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:text="@string/return_to_homepage_btn"
            android:layout_marginTop="100sp"/>
    </LinearLayout>

</LinearLayout>